apps/base/media/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
  labels:
    app: plex
spec:
  ports:
  - port: 32400
    targetPort: 32400
    name: web
  selector:
    app: plex
