apps/base/media/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: plex.mellor.dev
    external-dns.alpha.kubernetes.io/target: external.mellor.dev
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: external
  rules:
  - host: plex.mellor.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex
            port:
              number: 32400
  tls: 
  - secretName: plex.mellor.dev
    hosts:
    - plex.mellor.dev
